--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="LOL.html">LOL</a></h1>
+  <h1><a href="lol24.html">LOL</a></h1>
 <ol>
   <li><a href="1.html">리그오브레전드</a></li>
   <li><a href="2.html">롤의 대회 내용</a></li>
