--- a/3.html
+++ b/3.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="LOL.html">LOL</a></h1>
+  <h1><a href="lol24.html">LOL</a></h1>
 <ol>
-  <li><a href="lol24.html">리그오브레전드</a></li>
+  <li><a href="1.html">리그오브레전드</a></li>
   <li><a href="2.html">롤의 대회 내용</a></li>
   <li><a href="3.html">롤의 게임모드</a></li>
 </ol>
