--- a/lol24.html
+++ b/lol24.html
@@ -5,13 +5,13 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="LOL.html">LOL</a></h1>
+  <h1><a href="lol24.html">LOL</a></h1>
 <ol>
-  <li><a href="lol24.html">리그오브레전드</a></li>
+  <li><a href="1.html">리그오브레전드</a></li>
   <li><a href="2.html">롤의 대회 내용</a></li>
   <li><a href="3.html">롤의 게임모드</a></li>
 </ol>
-<h2>리그오브레전드</h2>
-<p>미국 라이엇 게임즈(Riot Games)에서 개발한 게임으로, 2009년 10월부터 서비스가 시작됐고 우리나라에서는 2012년 1월 정식 출시됐다. 10명이 5명씩 팀을 이루어 상대팀과 싸우는 대전게임으로, 사용자들이 직접 캐릭터를 선택해 상대방 진영을 초토화시켜야 게임이 끝난다. 이는 끝없이 이어지는 실시간 전투와 협동을 통한 팀플레이, RTS(Real-Time Strategy)와 RPG(Role playing game)를 하나의 게임에서 동시에 즐길 수 있다는 특징이 있다.</p>
-<img src="리그오브레전드란.jpg" width="100%">
+<h2>WELCOME!</h2>
+<p>전세계적으로 유행중인 게임 리그오브레전드(League Of Legends)의 관한 정보입니다!
+<img src="리그오브레전드.jpg" width="100%">
 </body>
